# DMX-UI

./: CMakeLists.txt  main.cpp
.docu/: 3d influence of subfunction.ggb  ColorAnimation.pdn  EasingFunctions.ggb  StagePosition.pdn  fixturetype.schema.json  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  meeting.md
DMXInterface/: ArtNetInterface.cpp  ArtNetInterface.h  DMXInterface.h
public/: Direct.cpp  Direct.h  Endpoint.h
